# ComfyUI-DisPose

./: README.md  dispose-example-comfy.json  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
configs/: test.yaml
mimicmotion/modules/: controlnet.py  controlnetmixin.py  pose_net.py  unet.py
mimicmotion/modules/cmp/experiments/semiauto_annot/resnet50_vip+mpii_liteflow/checkpoints/: ckpt_iter_42000.pth.tar
mimicmotion/pipelines/: pipeline_ctrl.py
mimicmotion/utils/: dift_utils.py
